--- a/a_propos.html
+++ b/a_propos.html
@@ -73,57 +73,7 @@
                                 </div>
                                 <div>
                                     <h4 class="m-t-0 m-b-0"><strong>Jean-Jacques Beaudelaire</strong> KOUADIO </h4>
-                                    <span class="job_post">Conseiller juridique</span>
-                                    <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
-
-                                    <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
-                                                class="fa-brands fa-linkedin"></i></a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div>
-                    <div class="card profile-header">
-                        <div class="body">
-                            <div class="row">
-                                <div>
-                                    <div class="profile-image float-md-right"> <img
-                                            src="https://bootdey.com/img/Content/avatar/avatar2.png" alt=""> </div>
-                                </div>
-                                <div>
-                                    <h4 class="m-t-0 m-b-0"><strong>Didier</strong> GOURENE</h4>
-                                    <span class="job_post">Conseiller juridique associé</span>
-                                    <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
-
-                                    <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
-                                                class="fa-brands fa-linkedin"></i></a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div>
-                    <div class="card profile-header">
-                        <div class="body">
-                            <div class="row">
-                                <div>
-                                    <div class="profile-image float-md-right"> <img
-                                            src="https://bootdey.com/img/Content/avatar/avatar3.png" alt=""> </div>
-                                </div>
-                                <div>
-                                    <h4 class="m-t-0 m-b-0"><strong>Souleymana</strong> KARAMOKO</h4>
-                                    <span class="job_post">Analyste en recherche juridique </span>
-                                    <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
+                                    <span class="job_post">Conseil juridique</span>
 
                                     <p class="social-icon m-t-5 m-b-0">
                                         <a title="Instagram" href="javascript:void(0);"><i
@@ -144,10 +94,60 @@
                                     <div class="profile-image float-md-right"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar6.png" alt=""> </div>
                                 </div>
+
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Didier</strong> GOURENE</h4>
+                                    <span class="job_post">Expert en droit de l'environnement</span>
+
+                                    <p class="social-icon m-t-5 m-b-0">
+                                        <a title="Instagram" href="javascript:void(0);"><i
+                                                class="fa-brands fa-linkedin"></i></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div>
+                    <div class="card profile-header">
+                        <div class="body">
+                            <div class="row">
+                                <div>
+                                    <div class="profile-image float-md-right"> <img
+                                            src="https://bootdey.com/img/Content/avatar/avatar2.png" alt=""> </div>
+                                </div>
+
+                                <div>
+                                    <h4 class="m-t-0 m-b-0"><strong>Souleymana</strong> KARAMOKO</h4>
+                                    <span class="job_post">Expert en droit des affaires</span>
+
+                                    <p class="social-icon m-t-5 m-b-0">
+                                        <a title="Instagram" href="javascript:void(0);"><i
+                                                class="fa-brands fa-linkedin"></i></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div>
+                    <div class="card profile-header">
+                        <div class="body">
+                            <div class="row">
+                                <div>
+                                    <div class="profile-image float-md-right"> <img
+                                            src="https://bootdey.com/img/Content/avatar/avatar3.png" alt=""> </div>
+                                </div>
+
+
                                 <div>
                                     <h4 class="m-t-0 m-b-0"><strong>Stephanie</strong> OCHO</h4>
-                                    <span class="job_post">Gestionnaire de dossiers </span>
-                                    <p>795 Folsom Ave, Suite 600 San Francisco, CADGE 94107</p>
+                                    <span class="job_post">Assistante/ chargée de relatin </span>
 
                                     <p class="social-icon m-t-5 m-b-0">
                                         <a title="Instagram" href="javascript:void(0);"><i
@@ -164,16 +164,16 @@
 
     <div class="section_four">
         <img src="images/CBC_black_sans_fond.png">
-        <div class="">
+        <div>
+            <div>Nous sommes situé à Treichville centre,en face du FDFP.</div>
+
             <div class="nav_items" style="color: black;">
-                <p><a href="tel:+2252721520799"><i class="fa-solid fa-phone"></i></a></p>
-                <p><a href="mailto: cabinet.beaudelaire.conseil@gmail.com"><i
-                            class="fa-sharp fa-regular fa-envelope"></i></a>
+                <p>+2252721520799</p>
+                <p>cabinet.beaudelaire.conseil@gmail.com</a>
                 </p>
-                <p>Notre localisation</p>
-                <p>Prendre rendez-vous</p>
+                <p>Nous retrouver</p>
             </div>
-            <p></p>
         </div>
     </div>
+
 </body>
