--- a/index.html
+++ b/index.html
@@ -279,23 +279,17 @@
     <div class="section_four">
         <img src="images/CBC_black_sans_fond.png">
         <div>
+            <div>Nous sommes situé à Treichville centre,en face du FDFP.</div>
+
             <div class="nav_items" style="color: black;">
-                <p><a href="tel:+2252721520799"><i class="fa-solid fa-phone"></i></a></p>
-                <p><a href="mailto: cabinet.beaudelaire.conseil@gmail.com"><i
-                            class="fa-sharp fa-regular fa-envelope"></i></a>
+                <p>+2252721520799</p>
+                <p>cabinet.beaudelaire.conseil@gmail.com</a>
                 </p>
                 <p>Nous retrouver</p>
             </div>
-            <p>Situé à Treichville centre, en face de la FDFP,
-                nous sommes ouvert du lundi au vendredi de 7h30 à 18h30.</p>
-            <p>Mail: cabinet.beaudelaire.conseil@gmail.com</p>
-            <p>Tel: +2252721520799</p>
         </div>
     </div>
 
 </body>
 
 </html>
-
-
-<!-- Formulaire de contact -->
