--- a/services.html
+++ b/services.html
@@ -359,20 +359,51 @@
         conseil juridique pour cultiver une équipe
         florissante et promouvoir un environnement de travail épanouissant
         et productif.
+
+        <h3> Due Diligence</h3>
+
+        La prise de décisions éclairées est le fondement de toute entreprise prospère. Chez [Nom du Cabinet], nous
+        comprenons que chaque choix que vous faites peut avoir des répercussions juridiques importantes. C'est pourquoi
+        notre service de due diligence est conçu pour vous offrir une vue complète et approfondie de tous les aspects
+        juridiques impliqués dans vos transactions et décisions d'affaires.
+
+        <h4> Notre Approche</h4>
+
+        Notre équipe de juristes chevronnés est expérimentée dans la réalisation d'examens approfondis et méthodiques.
+        Nous ne nous contentons pas de survoler la surface, nous creusons en profondeur pour identifier les risques
+        potentiels, les opportunités cachées et les implications légales de chaque mouvement que vous envisagez. Que ce
+        soit pour une fusion, une acquisition, un investissement ou une expansion, notre approche de due diligence est
+        conçue pour vous fournir les informations dont vous avez besoin pour prendre des décisions éclairées.
+
+        <h4>Nos Domaines d'Expertise en Due Diligence</h4>
+
+        Nous couvrons un large éventail de domaines juridiques dans nos services de due diligence, notamment :
+
+        Conformité Réglementaire : Nous examinons minutieusement les exigences réglementaires applicables à votre
+        industrie et à vos opérations, vous aidant ainsi à éviter les pièges de la non-conformité.
+
+        Contrats et Obligations : Notre équipe analyse vos contrats et engagements pour s'assurer que vous comprenez
+        pleinement vos obligations légales et contractuelles.
+
+        Propriété Intellectuelle : Nous évaluons la protection et la gestion de vos actifs intellectuels, tels que les
+        brevets, les marques de commerce et les droits d'auteur.
+
+        Litiges Potentiels : Nous identifions les litiges en cours ou potentiels qui pourraient affecter vos décisions
+        d'affaires.
     </div>
 
     <div class="section_four">
         <img src="images/CBC_black_sans_fond.png">
-        <div class="">
+        <div>
+            <div>Nous sommes situé à Treichville centre,en face du FDFP.</div>
+
             <div class="nav_items" style="color: black;">
-                <p><a href="tel:+2252721520799"><i class="fa-solid fa-phone"></i></a></p>
-                <p><a href="mailto: cabinet.beaudelaire.conseil@gmail.com"><i
-                            class="fa-sharp fa-regular fa-envelope"></i></a>
+                <p>+2252721520799</p>
+                <p>cabinet.beaudelaire.conseil@gmail.com</a>
                 </p>
-                <p>Notre localisation</p>
-                <p>Prendre rendez-vous</p>
+                <p>Nous retrouver</p>
             </div>
-            <p></p>
         </div>
     </div>
+
 </body>
