Maj de la toc et insertion photo

--- a/a_propos.html
+++ b/a_propos.html
@@ -7,11 +7,10 @@
     <title>CBC | Cabinet Beaudelaire Conseil</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/92aa274529.js" crossorigin="anonymous"></script>
-
+    <script defer src="script.js"></script>
 </head>
 
 <body>
-
     <nav class="navigation">
         <a href="index.html"><img src="images/CBC_sans_fond.png"></a>
         <div> <a href="services.html">Services</a></div>
@@ -58,21 +57,16 @@
                 </form>
             </div>
 
-            <script>
-                function openForm() {
-                    document.getElementById("myForm").style.display = "block";
-                }
 
-                function closeForm() {
-                    document.getElementById("myForm").style.display = "none";
-                }
-            </script>
+            <div> <a title="Linkedin" href="https://www.linkedin.com/company/cabinet-beaudelaire-conseil/"><i
+                        class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a></div>
 
             <div><a href="mailto: cabinet.beaudelaire.conseil@gmail.com">
                     <i class="fa-sharp fa-regular fa-envelope" style="color: #ffffff;"></i></a>
             </div>
             <div style="color: #ffffff;"> <i class="fa-sharp fa-solid fa-location-pin" style="color: #ffffff;"></i>
                 Côte d'Ivoire</div>
+
 
         </div>
     </nav>
@@ -116,17 +110,17 @@
                 <div>
                     <div class="card profile-header">
                         <div class="body">
-                            <div class="row">
+                            <div>
                                 <div>
-                                    <div class="profile-image float-md-right"> <img
-                                            src="https://bootdey.com/img/Content/avatar/avatar7.png" alt=""> </div>
+                                    <div class="profile-image"> <img src="images/kouadio.jpeg" alt="">
+                                    </div>
                                 </div>
                                 <div>
                                     <h4 class="m-t-0 m-b-0"><strong>Jean-Jacques Beaudelaire</strong> KOUADIO </h4>
                                     <span class="job_post">Conseil juridique</span>
 
                                     <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
+                                        <a title="Linkedin" href="javascript:void(0);"><i
                                                 class="fa-brands fa-linkedin"></i></a>
                                     </p>
                                 </div>
@@ -139,18 +133,18 @@
                 <div>
                     <div class="card profile-header">
                         <div class="body">
-                            <div class="row">
+                            <div>
                                 <div>
-                                    <div class="profile-image float-md-right"> <img
-                                            src="https://bootdey.com/img/Content/avatar/avatar6.png" alt=""> </div>
+                                    <div class="profile-image"> <img src="images/kadisha.jpeg" alt="">
+                                    </div>
                                 </div>
 
                                 <div>
-                                    <h4 class="m-t-0 m-b-0"><strong>Didier</strong> GOURENE</h4>
-                                    <span class="job_post">Expert en droit de l'environnement</span>
+                                    <h4 class="m-t-0 m-b-0"><strong>Elodie</strong> KADISHA</h4>
+                                    <span class="job_post">Droit des affaires & correspondante à l'étranger</span>
 
                                     <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
+                                        <a title="Linkedin" href="javascript:void(0);"><i
                                                 class="fa-brands fa-linkedin"></i></a>
                                     </p>
                                 </div>
@@ -158,15 +152,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
                 <div>
                     <div class="card profile-header">
                         <div class="body">
-                            <div class="row">
+                            <div>
                                 <div>
-                                    <div class="profile-image float-md-right"> <img
+                                    <div class="profile-image"> <img
                                             src="https://bootdey.com/img/Content/avatar/avatar2.png" alt=""> </div>
                                 </div>
 
@@ -175,7 +167,7 @@
                                     <span class="job_post">Expert en droit des affaires</span>
 
                                     <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
+                                        <a title="Linkedin" href="javascript:void(0);"><i
                                                 class="fa-brands fa-linkedin"></i></a>
                                     </p>
                                 </div>
@@ -188,19 +180,20 @@
                 <div>
                     <div class="card profile-header">
                         <div class="body">
-                            <div class="row">
+                            <div>
                                 <div>
-                                    <div class="profile-image float-md-right"> <img
-                                            src="https://bootdey.com/img/Content/avatar/avatar3.png" alt=""> </div>
+                                    <div class="profile-image"> <img src="images/ocho.jpeg" alt="">
+                                    </div>
                                 </div>
 
 
                                 <div>
                                     <h4 class="m-t-0 m-b-0"><strong>Stephanie</strong> OCHO</h4>
-                                    <span class="job_post">Assistante/ chargée de relatin </span>
+                                    <span class="job_post">Assistante/ chargée de relation </span>
 
                                     <p class="social-icon m-t-5 m-b-0">
-                                        <a title="Instagram" href="javascript:void(0);"><i
+                                        <a title="Linkedin"
+                                            href="https://www.linkedin.com/in/stephanie-ocho-658572228/"><i
                                                 class="fa-brands fa-linkedin"></i></a>
                                     </p>
                                 </div>
@@ -222,6 +215,8 @@
                 <p>cabinet.beaudelaire.conseil@gmail.com</a>
                 </p>
                 <p>Nous retrouver</p>
+                <a title="Linkedin" href="https://www.linkedin.com/company/cabinet-beaudelaire-conseil/"><i
+                        class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </div>
